--- a/circleci/Makefile
+++ b/circleci/Makefile
@@ -1,16 +1,20 @@
 # Copyright 2019 Tricot Inc.
 # Use of this source code is governed by the license in the LICENSE file.
 
+# The version of the image (in the tag).
+# * Increase this whenever one or more of the dependencies is updated.
+# * Increase the field corresponding to the field in the updated dependency (resetting lesser fields
+#   to 0). If multiple dependencies are updated, increase the greatest field.
+# * Use standard guidelines (major.minor.patch) for other Dockerfile changes.
+DOCKER_TAG_VERSION=1.0.0
+
 # The version of the upstream image. E.g., 1.11.5 for circleci/golang:1.11.5-node.
 UPSTREAM_VERSION=1.12.6
 
 # The version of bazel.
 BAZEL_VERSION=0.27.0
 
-# Use this to detect changes in the Dockerfile and tag it appropriately.
-DOCKERFILE_CRC32=$(shell crc32 Dockerfile)
-
-DOCKER_TAG=tricot/build-public-circleci:$(UPSTREAM_VERSION)-$(BAZEL_VERSION)-$(DOCKERFILE_CRC32)
+DOCKER_TAG=tricot/build-public-circleci:$(DOCKER_TAG_VERSION)
 
 all: build
 
